--- a/src/app/common/modal/modal/modal.component.html
+++ b/src/app/common/modal/modal/modal.component.html
@@ -5,7 +5,7 @@
 		</h2>
 
 		<button type="button" class="close" aria-label="Cancel" (click)="cancel.emit()">
-			<span class="fa fa-remove" aria-hidden="true"></span>
+			<span class="fa-solid fa-remove" aria-hidden="true"></span>
 		</button>
 	</section>
 
