--- a/src/app/common/system-alert/system-alert-icon.component.html
+++ b/src/app/common/system-alert/system-alert-icon.component.html
@@ -1,6 +1,6 @@
 <div class="alert-icon" [ngSwitch]="icon">
-	<span *ngSwitchCase="'success'" class="fa fa-fw fa-check-circle"></span>
-	<span *ngSwitchCase="'warning'" class="fa fa-fw fa-exclamation"></span>
-	<span *ngSwitchCase="'danger'" class="fa fa-fw fa-exclamation-triangle"></span>
-	<span *ngSwitchCase="'info'" class="fa fa-fw fa-info-circle"></span>
+	<span *ngSwitchCase="'success'" class="fa-solid fa-fw fa-check-circle"></span>
+	<span *ngSwitchCase="'warning'" class="fa-solid fa-fw fa-exclamation"></span>
+	<span *ngSwitchCase="'danger'" class="fa-solid fa-fw fa-exclamation-triangle"></span>
+	<span *ngSwitchCase="'info'" class="fa-solid fa-fw fa-info-circle"></span>
 </div>
