--- a/src/app/common/table/expander/asy-expander-column.component.html
+++ b/src/app/common/table/expander/asy-expander-column.component.html
@@ -7,7 +7,7 @@
 			*ngIf="isExpandable(index, item)"
 		>
 			<span
-				class="fa fa-2x fa-angle-down"
+				class="fa-solid fa-2x fa-angle-down"
 				[class.fa-flip-vertical]="isExpanded(index, item)"
 			></span>
 		</div>
