--- a/src/app/common/table/sidebar/sidebar.component.html
+++ b/src/app/common/table/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
 		placement="bottom"
 		container="body"
 	>
-		<span class="fa fa-lg fa-times"></span>
+		<span class="fa-solid fa-lg fa-times"></span>
 	</a>
 </div>
 <div class="sidebar-body" [class.card-body]="showInCard">
