--- a/src/app/core/admin/cache-entries/cache-entries.component.html
+++ b/src/app/core/admin/cache-entries/cache-entries.component.html
@@ -53,7 +53,7 @@
 							class="dropdown-toggle dropdown-toggle-hide-caret px-2"
 							dropdownToggle
 						>
-							<span class="fa fa-lg fa-ellipsis-v"></span>
+							<span class="fa-solid fa-lg fa-ellipsis-v"></span>
 						</span>
 						<ul *dropdownMenu class="dropdown-menu dropdown-menu-right mt-2">
 							<li>
