--- a/src/app/core/admin/end-user-agreement/manage-eua.component.html
+++ b/src/app/core/admin/end-user-agreement/manage-eua.component.html
@@ -1,7 +1,7 @@
 <section>
 	<!-- Show a breadcrumb to the list EUAs page -->
 	<a class="back-link" [routerLink]="['/admin/euas']">
-		<span class="fa fa-angle-double-left"></span> Back to EUAs
+		<span class="fa-solid fa-angle-double-left"></span> Back to EUAs
 	</a>
 
 	<!-- Alert Notifications -->
