--- a/src/app/core/admin/feedback/list-feedback/admin-list-feedback.component.html
+++ b/src/app/core/admin/feedback/list-feedback/admin-list-feedback.component.html
@@ -27,7 +27,7 @@
 					class="btn btn-outline-secondary ml-auto"
 					(click)="exportCurrentView()"
 				>
-					<span class="fa fa-download"></span> Export
+					<span class="fa-solid fa-download"></span> Export
 				</button>
 
 				<button
@@ -36,7 +36,7 @@
 					tooltip="Set Columns"
 					(click)="sidebar.toggle()"
 				>
-					<span class="fa fa-columns"></span>
+					<span class="fa-solid fa-columns"></span>
 				</button>
 			</div>
 		</div>
