--- a/src/app/core/admin/messages/list-messages/list-messages.component.html
+++ b/src/app/core/admin/messages/list-messages/list-messages.component.html
@@ -27,7 +27,7 @@
 					type="button"
 					class="btn btn-primary ml-auto"
 				>
-					<span class="fa fa-plus"></span> Create Message
+					<span class="fa-solid fa-plus"></span> Create Message
 				</button>
 			</div>
 		</div>
@@ -67,7 +67,7 @@
 							class="dropdown-toggle dropdown-toggle-hide-caret px-2"
 							dropdownToggle
 						>
-							<span class="fa fa-lg fa-ellipsis-v"></span>
+							<span class="fa-solid fa-lg fa-ellipsis-v"></span>
 						</span>
 						<ul *dropdownMenu class="dropdown-menu dropdown-menu-right mt-2">
 							<li>
