--- a/src/app/core/admin/messages/manage-message.component.html
+++ b/src/app/core/admin/messages/manage-message.component.html
@@ -5,7 +5,7 @@
 		class="back-link"
 		[routerLink]="['/admin/messages']"
 	>
-		<span class="fa fa-angle-double-left"></span> Back to Messages
+		<span class="fa-solid fa-angle-double-left"></span> Back to Messages
 	</a>
 
 	<!-- Alert Notifications -->
