--- a/src/app/core/admin/user-management/manage-user.component.html
+++ b/src/app/core/admin/user-management/manage-user.component.html
@@ -5,7 +5,7 @@
 		class="back-link"
 		routerLink="/admin/users"
 	>
-		<span class="fa fa-angle-double-left"></span> Back to Users
+		<span class="fa-solid fa-angle-double-left"></span> Back to Users
 	</a>
 
 	<!-- Alert Notifications -->
