--- a/src/app/core/teams/add-members-modal/add-members-modal.component.html
+++ b/src/app/core/teams/add-members-modal/add-members-modal.component.html
@@ -67,7 +67,7 @@
 							placement="bottom"
 							(click)="remove(i)"
 						>
-							<span class="fa fa-lg fa-trash"></span>
+							<span class="fa-solid fa-lg fa-trash"></span>
 						</a>
 					</td>
 				</tr>
