--- a/src/app/core/teams/create-team/create-team.component.html
+++ b/src/app/core/teams/create-team/create-team.component.html
@@ -1,7 +1,7 @@
 <section class="p-3">
 	<!-- Show a breadcrumb to the list teams page -->
 	<a class="back-link" [routerLink]="['/teams']">
-		<span class="fa fa-angle-double-left"></span> Back to Teams
+		<span class="fa-solid fa-angle-double-left"></span> Back to Teams
 	</a>
 
 	<!-- Alert Notifications -->
