--- a/src/app/core/teams/list-team-members/list-team-members.component.html
+++ b/src/app/core/teams/list-team-members/list-team-members.component.html
@@ -16,7 +16,7 @@
 					type="button"
 					class="btn btn-primary ml-auto"
 				>
-					<span class="fa fa-plus"></span> Add New
+					<span class="fa-solid fa-plus"></span> Add New
 				</button>
 			</div>
 		</div>
@@ -99,7 +99,7 @@
 						placement="bottom"
 						(click)="removeMember(member)"
 					>
-						<span class="fa fa-lg fa-trash"></span>
+						<span class="fa-solid fa-lg fa-trash"></span>
 					</a>
 				</td>
 			</ng-container>
