--- a/src/app/core/teams/list-teams/list-teams.component.html
+++ b/src/app/core/teams/list-teams/list-teams.component.html
@@ -29,7 +29,7 @@
 					class="btn btn-primary ml-auto"
 					*ngIf="canCreateTeam"
 				>
-					<span class="fa fa-plus"></span> Create Team
+					<span class="fa-solid fa-plus"></span> Create Team
 				</button>
 			</div>
 		</div>
