--- a/src/app/core/teams/view-team/general-details/general-details.component.html
+++ b/src/app/core/teams/view-team/general-details/general-details.component.html
@@ -21,7 +21,7 @@
 					*ngIf="canManageTeam"
 					(click)="edit()"
 				>
-					<span class="fa fa-lg fa-pencil"></span>
+					<span class="fa-solid fa-lg fa-pencil"></span>
 				</button>
 				<div class="inline-edit-header-btns ml-auto" *ngIf="isEditing">
 					<button class="btn btn-outline-secondary" type="button" (click)="cancelEdit()">
