--- a/src/app/core/teams/view-team/view-team.component.html
+++ b/src/app/core/teams/view-team/view-team.component.html
@@ -5,7 +5,7 @@
 	<!-- Show a breadcrumb to the list teams page -->
 	<div class="mb-3">
 		<a class="back-link mb-1" routerLink="/teams">
-			<span class="fa fa-angle-double-left"></span> Back to Teams
+			<span class="fa-solid fa-angle-double-left"></span> Back to Teams
 		</a>
 	</div>
 
