--- a/src/app/site/example/forms/forms.component.html
+++ b/src/app/site/example/forms/forms.component.html
@@ -277,13 +277,13 @@
 
 	<h3 class="pt-3">Square Buttons <small>(for use with fa-fw icons)</small></h3>
 	<button type="button" class="mr-3 btn btn-primary btn-square btn-sm">
-		<span class="fa fa-fw fa-upload"></span>
+		<span class="fa-solid fa-fw fa-upload"></span>
 	</button>
 	<button type="button" class="mr-3 btn btn-primary btn-square">
-		<span class="fa fa-fw fa-upload"></span>
+		<span class="fa-solid fa-fw fa-upload"></span>
 	</button>
 	<button type="button" class="mr-3 btn btn-primary btn-square btn-lg">
-		<span class="fa fa-fw fa-upload"></span>
+		<span class="fa-solid fa-fw fa-upload"></span>
 	</button>
 
 	<h2 class="pt-4">File Input</h2>
@@ -305,7 +305,7 @@
 	<div class="custom-file-btn custom-file-btn-primary">
 		<input type="file" class="custom-file-btn-input" id="customFile2" />
 		<label class="btn custom-file-btn-label" for="customFile2"
-			><span class="fa fa-upload mr-2"></span>Choose File</label
+			><span class="fa-solid fa-upload mr-2"></span>Choose File</label
 		>
 	</div>
 
@@ -319,7 +319,7 @@
 			(change)="fileSelected($event)"
 		/>
 		<label class="btn custom-file-btn-label" for="customFile3"
-			><span class="fa fa-upload mr-2"></span>Choose File</label
+			><span class="fa-solid fa-upload mr-2"></span>Choose File</label
 		>
 	</div>
 </form>
