--- a/src/app/common/search-input/search-input.component.html
+++ b/src/app/common/search-input/search-input.component.html
@@ -7,8 +7,12 @@
 		(keyup)="onKeyup()"
 		(input)="onInput()"
 	/>
-	<span *ngIf="search.length === 0" class="icon fa fa-search"></span>
-	<span *ngIf="search.length > 0" (click)="clearSearch($event)" class="icon fa fa-times"></span>
+	<span *ngIf="search.length === 0" class="icon fa-solid fa-search"></span>
+	<span
+		*ngIf="search.length > 0"
+		(click)="clearSearch($event)"
+		class="icon fa-solid fa-times"
+	></span>
 </div>
 <div *ngIf="!disableMinCountMessage && showMinCountMessage" [@minCount] class="text-muted pt-2">
 	<div class="pt-2">Searches require a minimum of {{ minSearchCharacterCount }} characters.</div>
