--- a/src/app/common/table/column-chooser/column-chooser.component.html
+++ b/src/app/common/table/column-chooser/column-chooser.component.html
@@ -20,7 +20,11 @@
 		class="form-check text-nowrap ml-1"
 		*ngFor="let column of _columns"
 	>
-		<span class="fa fa-lg fa-bars pr-1 mr-2" cdkDragHandle *ngIf="!sortingDisabled"></span>
+		<span
+			class="fa-solid fa-lg fa-bars pr-1 mr-2"
+			cdkDragHandle
+			*ngIf="!sortingDisabled"
+		></span>
 		<input
 			class="form-check-input"
 			type="checkbox"
