--- a/src/app/common/table/filter/asy-header-text-filter/asy-header-text-filter.component.html
+++ b/src/app/common/table/filter/asy-header-text-filter/asy-header-text-filter.component.html
@@ -2,14 +2,14 @@
 	<span class="dropdown-toggle dropdown-toggle-hide-caret" dropdownToggle>
 		<span
 			[hidden]="isFiltered"
-			class="filter fa fa-list"
+			class="filter fa-solid fa-list"
 			tooltip="Apply Filters"
 			placement="bottom"
 			container="body"
 		></span>
 		<span
 			[hidden]="!isFiltered"
-			class="filter fa fa-filter"
+			class="filter fa-solid fa-filter"
 			tooltip="Edit Filters"
 			placement="bottom"
 			container="body"
