--- a/src/app/common/table/sort/asy-sort-header/asy-sort-header.component.html
+++ b/src/app/common/table/sort/asy-sort-header/asy-sort-header.component.html
@@ -3,11 +3,11 @@
 
 	<span class="fa-stack" *ngIf="sortable">
 		<span
-			class="fa fa-sort-desc fa-stack-1x low-opacity"
+			class="fa-solid fa-sort-desc fa-stack-1x low-opacity"
 			[class.sorted]="isSorted && sortDir === 'DESC'"
 		></span>
 		<span
-			class="fa fa-sort-asc fa-stack-1x low-opacity"
+			class="fa-solid fa-sort-asc fa-stack-1x low-opacity"
 			[class.sorted]="isSorted && sortDir === 'ASC'"
 		></span>
 	</span>
