--- a/src/app/core/admin/end-user-agreement/list-euas/admin-list-euas.component.html
+++ b/src/app/core/admin/end-user-agreement/list-euas/admin-list-euas.component.html
@@ -23,7 +23,7 @@
 
 			<div class="mb-3 ml-auto">
 				<button routerLink="/admin/eua" type="button" class="btn btn-primary ml-auto">
-					<span class="fa fa-plus"></span> Create EUA
+					<span class="fa-solid fa-plus"></span> Create EUA
 				</button>
 
 				<button
@@ -32,7 +32,7 @@
 					tooltip="Set Columns"
 					(click)="sidebar.toggle()"
 				>
-					<span class="fa fa-columns"></span>
+					<span class="fa-solid fa-columns"></span>
 				</button>
 			</div>
 		</div>
@@ -91,7 +91,7 @@
 								class="dropdown-toggle dropdown-toggle-hide-caret px-2"
 								dropdownToggle
 							>
-								<span class="fa fa-lg fa-ellipsis-v"></span>
+								<span class="fa-solid fa-lg fa-ellipsis-v"></span>
 							</span>
 							<ul *dropdownMenu class="dropdown-menu dropdown-menu-right mt-2">
 								<li>
