--- a/src/app/core/admin/user-management/list-users/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/list-users/admin-list-users.component.html
@@ -27,11 +27,11 @@
 					class="btn btn-outline-secondary"
 					(click)="exportCurrentView()"
 				>
-					<span class="fa fa-download"></span> Export
+					<span class="fa-solid fa-download"></span> Export
 				</button>
 
 				<button routerLink="/admin/user" type="button" class="btn btn-primary ml-3">
-					<span class="fa fa-user-plus"></span> Create User
+					<span class="fa-solid fa-user-plus"></span> Create User
 				</button>
 
 				<button
@@ -40,7 +40,7 @@
 					tooltip="Set Columns"
 					(click)="sidebar.toggle()"
 				>
-					<span class="fa fa-columns"></span>
+					<span class="fa-solid fa-columns"></span>
 				</button>
 			</div>
 		</div>
@@ -169,7 +169,7 @@
 								style="cursor: pointer"
 								dropdownToggle
 							>
-								<span class="fa fa-lg fa-ellipsis-v"></span>
+								<span class="fa-solid fa-lg fa-ellipsis-v"></span>
 							</span>
 							<ul *dropdownMenu class="dropdown-menu dropdown-menu-right mt-2">
 								<li>
