--- a/src/app/core/messages/view-all-messages/view-all-messages.component.html
+++ b/src/app/core/messages/view-all-messages/view-all-messages.component.html
@@ -25,7 +25,7 @@
 					<div class="row no-gutters">
 						<div class="col-alert-icon {{ messageType[message.type] | lowercase }}">
 							<span
-								class="fa alert-icon d-flex align-items-center"
+								class="fa-solid alert-icon d-flex align-items-center"
 								[ngClass]="{
 									'fa-check': message.type === messageType.MOTD,
 									'fa-info': message.type === messageType.INFO,
