--- a/src/app/core/help/getting-started/getting-started-help.component.html
+++ b/src/app/core/help/getting-started/getting-started-help.component.html
@@ -12,7 +12,9 @@
 
 <div class="callout callout-info">
 	<h4>Browser Recommendation</h4>
-	<pre><span class="fa-brands fa-3x fa-firefox"> Firefox</span>    <span class="fa-brands fa-3x fa-chrome"> Chrome</span></pre>
+	<pre>	
+		<span class="fa-brands fa-3x fa-firefox"></span><span class="ml-3" style="font-size: 3em">Firefox</span>    <span class="fa-brands fa-3x fa-chrome"></span><span class="ml-3" style="font-size: 3em">Chrome</span>
+	</pre>
 	<p>
 		{{ appName }} is designed to work in all modern browsers, and is optimized for Firefox and
 		Chrome.
