Update Font Awesome to 6.2.1 (#294)
* Updating version in package.json and angular.json

* adding references to v4 in index.html

* testing node version change

* updating to -solid notation

* adding font-size field

* making buttons inline

* fixing Jasmine test

* updating browser text styling

* updating fonts of browsers

--- a/src/styles/_selection.scss
+++ b/src/styles/_selection.scss
@@ -139,7 +139,8 @@ input {
 			}
 
 			&:after {
-				font: normal normal normal math.div($checkbox-inner-size, 1) FontAwesome; /* stylelint-disable-line */
+				font: var(--fa-font-solid);
+				font-size: math.div($checkbox-inner-size, 1);
 				color: $ux-color-white;
 				content: '\f00c';
 				top: $checkbox-inner-margin;
