--- a/src/app/core/help/getting-started/getting-started-help.component.html
+++ b/src/app/core/help/getting-started/getting-started-help.component.html
@@ -12,7 +12,9 @@
 
 <div class="callout callout-info">
 	<h4>Browser Recommendation</h4>
-	<pre><span class="fa fa-3x fa-firefox"> Firefox</span>    <span class="fa fa-3x fa-chrome"> Chrome</span></pre>
+	<pre>	
+		<span class="fa-brands fa-3x fa-firefox"></span><span class="ml-3" style="font-size: 3em">Firefox</span>    <span class="fa-brands fa-3x fa-chrome"></span><span class="ml-3" style="font-size: 3em">Chrome</span>
+	</pre>
 	<p>
 		{{ appName }} is designed to work in all modern browsers, and is optimized for Firefox and
 		Chrome.
@@ -24,13 +26,13 @@
 	<p>
 		Help is also located throughout the app. Whenever you see this icon:
 		<a class="no-href btn-icon inline-help-label"
-			><span class="fa fa-question-circle help-icon"></span></a
+			><span class="fa-solid fa-question-circle help-icon"></span></a
 		>, you can click to receive a tooltip.
 	</p>
 	<p>
 		You can get back to this Help at any time by clicking on the question mark icon
-		<span class="fa fa-question-circle help-icon"></span> in the left-hand navigation of the
-		site.
+		<span class="fa-solid fa-question-circle help-icon"></span> in the left-hand navigation of
+		the site.
 	</p>
 </div>
 
