refactor: improved accessibility for table headers and action menus

--- a/src/app/common/table/filter/_shared.scss
+++ b/src/app/common/table/filter/_shared.scss
@@ -4,6 +4,15 @@
 $filter-dropdown-font-size: 0.75rem !default;
 $filter-dropdown-max-height: 250px !default;
 
+button {
+	background: inherit;
+	border: none;
+	font: inherit;
+	padding-top: 0;
+	padding-bottom: 0;
+	transform: translateY(1px);
+}
+
 .dropdown-menu {
 	font-size: $filter-dropdown-font-size;
 	margin-top: 0.5rem;
