--- a/src/app/common/table/filter/asy-header-list-filter/asy-header-list-filter.component.html
+++ b/src/app/common/table/filter/asy-header-list-filter/asy-header-list-filter.component.html
@@ -1,5 +1,5 @@
-<span class="dropdown ml-2" container="body" [insideClick]="true" dropdown>
-	<span class="dropdown-toggle dropdown-toggle-hide-caret" dropdownToggle>
+<span class="dropdown" container="body" [insideClick]="true" dropdown>
+	<button class="dropdown-toggle dropdown-toggle-hide-caret" dropdownToggle>
 		<span
 			[hidden]="isFiltered"
 			class="filter fa-solid fa-list"
@@ -14,7 +14,7 @@
 			placement="bottom"
 			container="body"
 		></span>
-	</span>
+	</button>
 
 	<div
 		*dropdownMenu
@@ -37,6 +37,14 @@
 				<a style="cursor: pointer" (click)="clearFilter(); $event.stopPropagation()"
 					><u>Clear Filters</u></a
 				>
+			</div>
+			<div class="clear mt-2">
+				<button
+					class="btn btn-sm btn-link"
+					(click)="clearFilter(); $event.stopPropagation()"
+				>
+					<u>Clear Filters</u>
+				</button>
 			</div>
 			<div class="divider dropdown-divider mb-0 mx-3"></div>
 		</ng-container>
