--- a/src/app/common/table/sort/asy-sort-header/asy-sort-header.component.html
+++ b/src/app/common/table/sort/asy-sort-header/asy-sort-header.component.html
@@ -1,16 +1,17 @@
-<div class="text-nowrap" tabindex="0" role="button">
-	<ng-content></ng-content>
+<div class="text-nowrap">
+	<button>
+		<ng-content></ng-content>
 
-	<span class="fa-stack" *ngIf="sortable">
-		<span
-			class="fa-solid fa-sort-desc fa-stack-1x low-opacity"
-			[class.sorted]="isSorted && sortDir === 'DESC'"
-		></span>
-		<span
-			class="fa-solid fa-sort-asc fa-stack-1x low-opacity"
-			[class.sorted]="isSorted && sortDir === 'ASC'"
-		></span>
-	</span>
-
+		<span class="fa-stack" *ngIf="sortable">
+			<span
+				class="fa-solid fa-sort-desc fa-stack-1x low-opacity"
+				[class.sorted]="isSorted && sortDir === 'DESC'"
+			></span>
+			<span
+				class="fa-solid fa-sort-asc fa-stack-1x low-opacity"
+				[class.sorted]="isSorted && sortDir === 'ASC'"
+			></span>
+		</span>
+	</button>
 	<ng-content select="asy-header-filter"></ng-content>
 </div>
