Updated sort icons to have styling to indicate which column is being sorted on

--- a/src/app/common/table/sort/asy-sort-header/asy-sort-header.component.scss
+++ b/src/app/common/table/sort/asy-sort-header/asy-sort-header.component.scss
@@ -3,11 +3,11 @@
 .fa-solid,
 .fa-brands {
 	opacity: 0.3;
-}
 
-.fa.sorted {
-	color: $ux-color-primary;
-	opacity: 1;
+	&.sorted {
+		color: $ux-color-primary;
+		opacity: 1;
+	}
 }
 
 .fa-stack {
